--- a/index.html
+++ b/index.html
@@ -1,56 +1,51 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - glowy hover effect</title>
-  <link rel="stylesheet" href="./style.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>SOSAL</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- partial:index.partial.html -->
+    <main class="main flow">
+      <h1 class="main__heading"></h1>
+      <div class="main__cards cards">
+        <div class="cards__inner">
+          <div class="cards__card card">
+            <h2 class="card__heading">Регистрация в списке Forbes</h2>
+            <p class="card__price">От 100.000$</p>
+            <ul role="list" class="card__bullets flow">
+              <li>Вы попадете в список Forbes</li>
+              <li>Услуга оформляется раз и навсегда</li>
+            </ul>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe__IOUQPMnA6wcz87Gjv-WbcKkSLhxW30Jk_rf6Wtq9JBGEg/viewform" class="card__cta cta">Заказать услугу</a>
+          </div>
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<main class="main flow">
-  <h1 class="main__heading">Pricing</h1>
-  <div class="main__cards cards">
-    <div class="cards__inner">
-      <div class="cards__card card">
-        <h2 class="card__heading">Basic</h2>
-        <p class="card__price">$9.99</p>
-        <ul role="list" class="card__bullets flow">
-          <li>Access to standard workouts and nutrition plans</li>
-          <li>Email support</li>
-        </ul>
-        <a href="#basic" class="card__cta cta">Get Started</a>
+          <div class="cards__card card">
+            <h2 class="card__heading">Заказной эфир</h2>
+            <p class="card__price">От 40.000$</p>
+            <ul role="list" class="card__bullets flow">
+              <li>Вас услышит весь штат</li>
+              <li>Вы обратите внимание на свое мероприятие</li>
+            </ul>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSe__IOUQPMnA6wcz87Gjv-WbcKkSLhxW30Jk_rf6Wtq9JBGEg/viewform" class="card__cta cta">Заказать услугу</a>
+          </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">Реклама</h2>
+            <p class="card__price">От 30.000$</p>
+            <ul role="list" class="card__bullets flow">
+              <li>Вы экономите на рекламных объявлениях</li>
+              <li>Ваше объявление будет выделятся среди других</li>
+            </ul>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSe__IOUQPMnA6wcz87Gjv-WbcKkSLhxW30Jk_rf6Wtq9JBGEg/viewform" class="card__cta cta">Заказать услугу</a>
+          </div>
+        </div>
+
+        <div class="overlay cards__inner"></div>
       </div>
-
-      <div class="cards__card card">
-        <h2 class="card__heading">Pro</h2>
-        <p class="card__price">$19.99</p>
-        <ul role="list" class="card__bullets flow">
-          <li>Access to advanced workouts and nutrition plans</li>
-          <li>Priority Email support</li>
-          <li>Exclusive access to live Q&A sessions</li>
-        </ul>
-        <a href="#pro" class="card__cta cta">Upgrade to Pro</a>
-      </div>
-
-      <div class="cards__card card">
-        <h2 class="card__heading">Ultimate</h2>
-        <p class="card__price">$29.99</p>
-        <ul role="list" class="card__bullets flow">
-          <li>Access to all premium workouts and nutrition plans</li>
-          <li>24/7 Priority support</li>
-          <li>1-on-1 virtual coaching session every month</li>
-          <li>Exclusive content and early access to new features</li>
-        </ul>
-        <a href="#ultimate" class="card__cta cta">Go Ultimate</a>
-      </div>
-    </div>
-    
-    <div class="overlay cards__inner"></div>
-  </div>
-</main>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
+    </main>
+    <!-- partial -->
+    <script src="./script.js"></script>
+  </body>
 </html>
