--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -15,8 +16,11 @@
             <h2 class="card__heading">Регистрация в списке Forbes</h2>
             <p class="card__price">От 100.000$</p>
             <ul role="list" class="card__bullets flow">
-              <li>Вы попадете в список Forbes</li>
+             <h3>Внесем вас в список Forbes</h3>
+              <li>Вы попадете в список самых богатых лиц штата</li>
               <li>Услуга оформляется раз и навсегда</li>
+              <li>Список обновляется раз в день</li>
+              <li>Список считает все ваше имущество</li>
             </ul>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSe__IOUQPMnA6wcz87Gjv-WbcKkSLhxW30Jk_rf6Wtq9JBGEg/viewform" class="card__cta cta">Заказать услугу</a>
           </div>
@@ -25,8 +29,10 @@
             <h2 class="card__heading">Заказной эфир</h2>
             <p class="card__price">От 40.000$</p>
             <ul role="list" class="card__bullets flow">
+             <h3>Сделаем для вас заказной эфир</h3>
               <li>Вас услышит весь штат</li>
               <li>Вы обратите внимание на свое мероприятие</li>
+              <li>Поможем с составлением новости</li>
             </ul>
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe__IOUQPMnA6wcz87Gjv-WbcKkSLhxW30Jk_rf6Wtq9JBGEg/viewform" class="card__cta cta">Заказать услугу</a>
           </div>
@@ -35,8 +41,9 @@
             <h2 class="card__heading">Реклама</h2>
             <p class="card__price">От 30.000$</p>
             <ul role="list" class="card__bullets flow">
+             <h3>Оформим вам кодовое слово</h3>
               <li>Вы экономите на рекламных объявлениях</li>
-              <li>Ваше объявление будет выделятся среди других</li>
+              <li>Вы сможете оформить уникальный шаблон</li>
             </ul>
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe__IOUQPMnA6wcz87Gjv-WbcKkSLhxW30Jk_rf6Wtq9JBGEg/viewform" class="card__cta cta">Заказать услугу</a>
           </div>
@@ -46,6 +53,6 @@
       </div>
     </main>
     <!-- partial -->
-    <script src="./script.js"></script>
+    <script src="https://loop532.github.io/123/script.js"></script>
   </body>
 </html>
